Add item endpoint implementation + basic db configuration
