# svc/catalog/openapi.yaml
@@ -13,6 +13,12 @@ paths:
       responses:
         200:
           description: Swagger documentation
+        500:
+          description: Error response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/v1/items:
     get:
       summary: Returns all items
@@ -44,6 +50,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Item'
+        500:
+          description: Error response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/v1/items/{id}:
     get:
       summary: Returns an item by ID
@@ -56,7 +68,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int64
+            format: uint
       responses:
         200:
           description: Item response
@@ -75,7 +87,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int64
+            format: uint
       responses:
         204:
           description: Item deleted
@@ -90,7 +102,7 @@ paths:
           required: true
           schema:
             type: integer
-            format: int64
+            format: uint
       responses:
         200:
           description: Item updated
@@ -99,18 +111,52 @@ components:
     NewItem:
       required:
         - name
+        - description
+        - price
+        - priceCode
       properties:
         name:
           type: string
           description: Name of the item
+        description:
+          type: string
+          description: Description of the item
+        price:
+          type: number
+          format: double
+          description: Price of the item
+        priceCode:
+          type: string
+          description: Currency of the price
     Item:
       required:
         - id
+        - name
+        - description
+        - price
+        - priceCode
       properties:
         id:
           type: integer
-          format: int64
+          format: uint
           description: Unique ID of the item
         name:
           type: string
           description: Name of the item
+        description:
+          type: string
+          description: Description of the item
+        price:
+          type: number
+          format: double
+          description: Price of the item
+        priceCode:
+          type: string
+          description: Currency of the price
+    ErrorResponse:
+      required:
+        - message
+      properties:
+        message:
+          type: string
+          description: Error message
